--- a/0x05-Node_JS_basic/package.json
+++ b/0x05-Node_JS_basic/package.json
@@ -1,3 +1,4 @@
+
 {
     "name": "node_js_basics",
     "version": "1.0.0",
@@ -7,8 +8,7 @@
       "lint": "./node_modules/.bin/eslint",
       "check-lint": "lint [0-9]*.js",
       "test": "./node_modules/mocha/bin/mocha --require babel-register --exit",
-      "dev": "nodemon --exec babel-node --presets babel-preset-env ./server.js ./database.csv",
-      "full-test": "npm run lint && npm run test"
+      "dev": "nodemon --exec babel-node --presets babel-preset-env ./server.js ./database.csv"
     },
     "author": "",
     "license": "ISC",
